--- a/App/assets/stylesheet/style.css
+++ b/App/assets/stylesheet/style.css
@@ -1,4 +1,6 @@
-.page-std {
+/*
+
+body {
     font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
     color: rgba(255, 255, 255, 0.92);
     background: #1A202C;
@@ -49,8 +51,6 @@
     line-height: 1.15;
     margin: 0px;
 }
-
-/* chakra icon */
 
 .css-bokek7 {
     width: 1.25rem;
@@ -176,7 +176,7 @@ a {
 }
 
 .chakra-popover_content {
-    transform-origin: var(--popper-transform-origin); /* Testar com center */
+    transform-origin: var(--popper-transform-origin);
     opacity: 0;
     visibility: hidden;
     transform: scale(0.95) translateZ(0px);
@@ -422,4 +422,4 @@ a {
     padding-inline-start: var(--chakra-space-4);
     padding-inline-end: var(--chakra-space-4);
 }
-
+ */
